Change sponsor section color for visibility

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ colors:
   silver:    '#c0c0c0'
   gold:      '#d4af37'
   bronze:    '#f4a460'
-  violet:    '#afb9ff'
+  violet:    '#7a7d96'
 
 kramdown:
   auto_ids:  false
