Ah that's the missing part!

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ plugins:
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-target-blank
+  - jekyll-redirect-from
 
 # Optimize Jekyll
 exclude:
